# FiniteAutomata

./: Cargo.toml  README.md
src/: dfa.rs  enfa.rs  lib.rs  nfa.rs  nondeterministic_finite_automaton.rs  util.rs
