[package]
name = "finite-automata"
version = "0.1.1"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A collection of extendable finite automata with immutable state and transition data."
license = "MIT"
repository = "https://github.com/RobertDurfee/FiniteAutomata/tree/v0.1.1"
readme = "README.md"
keywords = ["finite-automata", "finite-state-machine", "state-machine", "automata"]
categories = ["data-structures"]
edition = "2018"
documentation = "https://docs.rs/finite-automata/0.1.1/finite_automata/"
homepage = "https://github.com/RobertDurfee/FiniteAutomata/tree/v0.1.1"

[dependencies]
segment-map = { path = "../SegmentMap", version = "0.1.0" }
